objects/License_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Usages</relationshipLabel>
        <relationshipName>License_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <externalId>true</externalId>
        <label>ItemNumber</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseId__c</fullName>
        <externalId>true</externalId>
        <label>LicenseId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Request_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Request Log</label>
        <referenceTo>License_Request_Log__c</referenceTo>
        <relationshipLabel>License Usages</relationshipLabel>
        <relationshipName>License_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <externalId>true</externalId>
        <label>Log Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_From__c</fullName>
        <label>Merge_From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>License Usages</relationshipLabel>
        <relationshipName>License_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Request_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Request Log</label>
        <referenceTo>Subscription_Request_Log__c</referenceTo>
        <relationshipLabel>License Usages</relationshipLabel>
        <relationshipName>License_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>License Usage</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>